fix: details marker spacing

--- a/components/01-atoms/details/details.pcss
+++ b/components/01-atoms/details/details.pcss
@@ -27,14 +27,14 @@
   
   &__summary {
     position: relative;
+    padding: 1rem;
+    padding-inline-start: 1.5rem;
+    overflow: hidden;
+    cursor: pointer;
+    color: var(--details-color-text);
     font-size: 1.2rem;
     line-height: 1.3;
     font-weight: 600;
-    vertical-align: middle;
-    padding: 1rem;
-    padding-inline-start: 1.5rem;
-    color: var(--details-color-text);
-    overflow: hidden;
     
     span,
     > * {
@@ -45,7 +45,6 @@
     &::marker {
       display: inline-block;
       color: var(--details-color-marker);
-      margin-inline-end: 0.5rem;
     }
   }
   
